@@ -14,17 +14,27 @@
 	cache 1, 1($t0)
 	cache 1, 2($t0)
 	cache 1, 3($t0)
-#endif
+	addiu $t1, $t1, -0x20
+	bne $t1, $zero, 1b
+	 addiu $t0, $t0, 0x20
 
+#else
 	addiu $t1, $t1, -0x4
 	bne $t1, $zero, 1b
 	 addiu $t0, $t0, 0x4
+#endif
 	sync
 	move $t0, $t2
 	subu $t1, $t3, $t2
 2:
 	cache 0, 0($t0)
+#ifdef GRUB_MACHINE_MIPS_LOONGSON
+	addiu $t1, $t1, -0x20
+	bne $t1, $zero, 2b
+	 addiu $t0, $t0, 0x20
+#else
 	addiu $t1, $t1, -0x4
 	bne $t1, $zero, 2b
 	 addiu $t0, $t0, 0x4
+#endif
 	sync
